# sudoku

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml
src/: __main__.py  checks.py  cli.py  load_image.py  main.py  output.py  solve.py  sudoku.py  tools.py  wrappers.py
src/scripts/: display.py  solve.py  sudoku.py  sudoku.txt
templates/: index.html
tests/: test_sudoku.py
tests/fixtures/: empty  expert  hard  light  middle  nightmare
