[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Nikolai Gordienko <nicolas.gordienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sudoku = "src.scripts.solve:main"