[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Nikolai Gordienko <nicolas.gordienko@gmail.com>"]
readme = "README.md"
packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sudoku = "src.scripts.sudoku:main"